--- a/about/index.html
+++ b/about/index.html
@@ -1,10 +1,103 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>About the project</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style-story.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+    <script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
   </head>
   <body>
-    <a href="../index.html">return</a>
+    <div class="title">
+      <h1>#About</h>
+    </div>
+    <div id="fixedbar">
+      <a href="../index.html"><div id="homebtn" class="box"><p>HOME</p></div></a>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
+
+    <div id="wraper-content">
+      <div class="box" id="box1"></div>
+      <div class="box" id="box2"></div>
+      <div class="box" id="box3"></div>
+      <div class="box" id="box4"></div>
+      <div class="box" id="box5"></div>
+      <div class="box" id="box6"></div>
+      <div class="box" id="box7"></div>
+      <div class="box" id="box8"></div>
+      <div class="box" id="box9"></div>
+      <div class="box" id="box10"></div>
+      <div class="box" id="box11"></div>
+      <div class="box box2" id="box12"><p class="intro-text">Hashtag hijacking together with stan culture is a vast topic. This project was born from the knowledge we gathered during the previous phase of the Final Synthesis Design Studio course, which we researched and analyzed different hashtags and their behaviors.</p></div>
+      <div class="box" id="box13"></div>
+      <div class="box" id="box14"></div>
+      <div class="box" id="box15"></div>
+      <div class="box" id="box16"></div>
+      <div class="box box2" id="box17"><p class="intro-text">Through this investigative work it was possible to grasp some patterns which we share in this artifact. After a lot of scrapes, charts, metrics we believe that it is meaningful to everyone to explore also a bit by themselves. Check out parts of our journey to understand better this digital tool and the environment it manifests.</p></div>
+      <div class="box" id="box18"></div>
+      <div class="box" id="box19"></div>
+      <div class="box" id="box20"></div>
+      <div class="box" id="box21"></div>
+      <div class="box" id="box22"></div>
+      <div class="box" id="box23"></div>
+      <div class="box" id="box24"></div>
+      <div class="box" id="box25"></div>
+      <div class="box" id="box26"></div>
+      <div class="box" id="box27"></div>
+      <div class="box" id="box28"></div>
+      <div class="box" id="box29"></div>
+      <div class="box" id="box30"></div>
+      <div class="box" id="box31"></div>
+      <div class="box" id="box32"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box" id="footer"></div>
+    </div>
+
   </body>
 </html>
