--- a/index.html
+++ b/index.html
@@ -3,13 +3,59 @@
   <head>
     <meta charset="utf-8">
     <title>A Hashtag Battlefield</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+    <script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
+    <!--<script type="text/javascript" src="script-story.js"></script>-->
   </head>
   <body>
-    <h1>A Hashtag Battlefield</h1>
-    <a href="proudboys/index.html">#ProudBoys</a>
-    <a href="millionmagamarch/index.html">#millionMAGAmarch</a>
-    <a href="savethechildren/index.html">#SaveTheChildren</a>
-    <a href="conclusion/index.html">Conclusion</a>
-    <a href="about/index.html">About</a>
+    <div id="story-content"></div>
+    <div id="opening-content">
+      <div id="wraper">
+        <div id="box1" class="box"></div>
+        <div id="box2" class="box"></div>
+        <div id="box3" class="box"></div>
+        <div id="box4" class="box box2">
+          <p class="title">A Hashtag Battlefield</p>
+          <div class="title-line"></div>
+        </div>
+        <div id="box5" class="box"></div>
+        <div id="box6" class="box"></div>
+        <a href="about/index.html"><div id="box7" class="box button"><p class="flip-text">About</p></div></a>
+        <div id="box8" class="box"></div>
+        <div id="box9" class="box"></div>
+        <div id="box10" class="box"></div>
+        <div id="box11" class="box"></div>
+        <div id="box12" class="box"></div>
+        <a href="proudboys/index.html"><div id="pb-btn" class="box button"><p class="tag-selection">#ProudBoys</p></div></a>
+        <div id="box14" class="box"></div>
+        <a href="conclusion/index.html"><div id="box15" class="box button"><p class="flip-text">Conclusion</p></div></a>
+        <div id="box16" class="box"></div>
+        <a href="savethechildren/index.html"><div id="stc-btn" class="box button"><p class="tag-selection">#SaveTheChildren</p></div></a>
+        <div id="box18" class="box"></div>
+        <div id="box19" class="box"></div>
+        <div id="box20" class="box"></div>
+        <div id="box21" class="box"></div>
+        <div id="box22" class="box"></div>
+        <div id="box23" class="box"></div>
+        <div id="box24" class="box"></div>
+        <div id="box25" class="box"></div>
+        <div id="box26" class="box"></div>
+        <div id="box27" class="box"></div>
+        <a href="millionmagamarch/index.html"><div id="mmm-btn" class="box button"><p class="tag-selection">#millionMAGAmarch</p></div></a>
+        <div id="box29" class="box"></div>
+        <div id="box30" class="box"></div>
+        <div id="box31" class="box"></div>
+        <!--<div id="box32" class="box"></div>-->
+      </div>
+    </div>
   </body>
 </html>
