--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
     <script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="scripts/home-script.js"></script>
     <!--<script type="text/javascript" src="script-story.js"></script>-->
   </head>
   <body>
