strating transition correction

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <div id="story-content"></div>
     <div id="opening-content">
       <div id="wraper">
-        <div id="box1" class="box"></div>
+        <a href="about/index.html"><div id="box1" class="box button"><p class="button-text">About</p></div></a>
         <div id="box2" class="box"></div>
         <div id="box3" class="box"></div>
         <div id="box4" class="box box2">
-          <p class="title">A Hashtag Battlefield</p>
+          <p class="title"><sup style="font-size: 60%; text-transform: lowercase; text-decoration: underline">A</sup> Hashtag Battlefield</p>
           <div class="title-line"></div>
         </div>
         <div id="box5" class="box"></div>
         <div id="box6" class="box"></div>
-        <a href="about/index.html"><div id="box7" class="box button"><p class="flip-text">About</p></div></a>
+        <a href="conclusion/index.html"><div id="box7" class="box button"><p class="button-text">Forewarning!</p></div></a>
         <div id="box8" class="box"></div>
         <div id="box9" class="box"></div>
         <div id="box10" class="box"></div>
@@ -37,7 +37,7 @@
         <div id="box12" class="box"></div>
         <a href="proudboys/index.html"><div id="pb-btn" class="box button"><p class="tag-selection">#ProudBoys</p></div></a>
         <div id="box14" class="box"></div>
-        <a href="conclusion/index.html"><div id="box15" class="box button"><p class="flip-text">Conclusion</p></div></a>
+        <div id="box15" class="box"></div>
         <div id="box16" class="box"></div>
         <a href="savethechildren/index.html"><div id="stc-btn" class="box button"><p class="tag-selection">#SaveTheChildren</p></div></a>
         <div id="box18" class="box"></div>
