--- a/millionmagamarch/index.html
+++ b/millionmagamarch/index.html
@@ -69,6 +69,14 @@
         <div class="box"></div>
         <div class="box off"></div>
         <div class="box"></div>
+        <div class="box" id="boxX"></div>
+        <div class="box"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off "></div>
+        <div class="box off"></div>
       </div>
     </div>
   </body>
