--- a/proudboys/index.html
+++ b/proudboys/index.html
@@ -70,6 +70,14 @@
         <div class="box"></div>
         <div class="box off"></div>
         <div class="box"></div>
+        <div class="box" id="boxX"></div>
+        <div class="box"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off "></div>
+        <div class="box off"></div>
       </div>
     </div>
   </body>
