--- a/index.html
+++ b/index.html
@@ -13,48 +13,50 @@
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
     <script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="scripts/home-script.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
     <!--<script type="text/javascript" src="script-story.js"></script>-->
   </head>
   <body>
-    <div id="story-content"></div>
+    <div id="video-container">
+      <video>
+        <source src="assets/introvideo.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+      </video>
+    </div>
     <div id="opening-content">
       <div id="wraper">
-        <a href="about/index.html"><div id="box1" class="box button"><p class="button-text">About</p></div></a>
-        <div id="box2" class="box"></div>
-        <div id="box3" class="box"></div>
-        <div id="box4" class="box box2">
-          <p class="title"><sup style="font-size: 60%; text-transform: lowercase; text-decoration: underline">A</sup> Hashtag Battlefield</p>
-          <div class="title-line"></div>
-        </div>
-        <div id="box5" class="box"></div>
-        <div id="box6" class="box"></div>
-        <a href="conclusion/index.html"><div id="box7" class="box button"><p class="button-text">Forewarning!</p></div></a>
-        <div id="box8" class="box"></div>
-        <div id="box9" class="box"></div>
-        <div id="box10" class="box"></div>
-        <div id="box11" class="box"></div>
-        <div id="box12" class="box"></div>
-        <a href="proudboys/index.html"><div id="pb-btn" class="box button"><p class="tag-selection">#ProudBoys</p></div></a>
-        <div id="box14" class="box"></div>
+        <div id="box1" class="box letter-a1"></div>
+        <div id="box2" class="box letter-H"></div>
+        <div id="box3" class="box letter-a"></div>
+        <div id="box4" class="box letter-s"></div>
+        <div id="box5" class="box letter-h"></div>
+        <div id="box6" class="box letter-t"></div>
+        <div id="box7" class="box letter-a"></div>
+        <div id="box8" class="box letter-g"></div>
+        <div id="box9" class="box letter-B"></div>
+        <div id="box10" class="box letter-a"></div>
+        <div id="box11" class="box letter-t"></div>
+        <div id="box12" class="box letter-t"></div>
+        <div id="box13" class="box letter-l"></div>
+        <div id="box14" class="box letter-e"><a id='launch-video'><p class='launch-video invisible'>START</p></a></div>
         <div id="box15" class="box"></div>
         <div id="box16" class="box"></div>
-        <a href="savethechildren/index.html"><div id="stc-btn" class="box button"><p class="tag-selection">#SaveTheChildren</p></div></a>
+        <div id="box17" class="box"></div>
         <div id="box18" class="box"></div>
-        <div id="box19" class="box"></div>
-        <div id="box20" class="box"></div>
-        <div id="box21" class="box"></div>
-        <div id="box22" class="box"></div>
-        <div id="box23" class="box"></div>
+        <div id="box19" class="box letter-f"></div>
+        <div id="box20" class="box letter-i"></div>
+        <div id="box21" class="box letter-e"></div>
+        <div id="box22" class="box letter-l"></div>
+        <div id="box23" class="box letter-d"></div>
         <div id="box24" class="box"></div>
         <div id="box25" class="box"></div>
         <div id="box26" class="box"></div>
         <div id="box27" class="box"></div>
-        <a href="millionmagamarch/index.html"><div id="mmm-btn" class="box button"><p class="tag-selection">#millionMAGAmarch</p></div></a>
+        <div id="box28" class="box"></div>
         <div id="box29" class="box"></div>
         <div id="box30" class="box"></div>
         <div id="box31" class="box"></div>
-        <!--<div id="box32" class="box"></div>-->
+        <div id="box32" class="box"></div>
       </div>
     </div>
   </body>
