--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
       <h1>#About</h>
     </div>
     <div id="fixedbar">
-      <a href="../index.html"><div id="homebtn" class="box"><p>HOME</p></div></a>
+      <a href="../menu/index.html"><div id="homebtn" class="box"><p>HOME</p></div></a>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
