--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="box29" class="box"></div>
         <div id="box30" class="box"></div>
         <div id="box31" class="box"></div>
-        <div id="box32" class="box"></div>
+        <div id="box32" class="box"><a id='skip' href="menu/index.html"><p class='skip invisible'>SKIP</p></a></div>
       </div>
     </div>
   </body>
