--- a/menu/index.html
+++ b/menu/index.html
@@ -20,7 +20,7 @@
     <div id="story-content"></div>
     <div id="opening-content">
       <div id="wraper">
-        <a href="about/index.html"><div id="box1" class="box button"><p class="button-text">About</p></div></a>
+        <a href="../about/index.html"><div id="box1" class="box button"><p class="button-text">About</p></div></a>
         <div id="box2" class="box"></div>
         <div id="box3" class="box"></div>
         <div id="box4" class="box box2">
@@ -29,17 +29,17 @@
         </div>
         <div id="box5" class="box"></div>
         <div id="box6" class="box"></div>
-        <a href="conclusion/index.html"><div id="box7" class="box button"><p class="button-text">Forewarning!</p></div></a>
+        <a href="../warning/index.html"><div id="box7" class="box button"><p class="button-text">Warning!</p></div></a>
         <div id="box8" class="box"></div>
         <div id="box9" class="box"></div>
         <div id="box10" class="box"></div>
         <div id="box11" class="box"></div>
         <div id="box12" class="box"></div>
-        <a href="proudboys/index.html"><div id="pb-btn" class="box button"><p class="tag-selection">#ProudBoys</p></div></a>
+        <a href="../proudboys/index.html"><div id="pb-btn" class="box button"><p class="tag-selection">#ProudBoys</p></div></a>
         <div id="box14" class="box"></div>
         <div id="box15" class="box"></div>
         <div id="box16" class="box"></div>
-        <a href="savethechildren/index.html"><div id="stc-btn" class="box button"><p class="tag-selection">#SaveTheChildren</p></div></a>
+        <a href="../savethechildren/index.html"><div id="stc-btn" class="box button"><p class="tag-selection">#SaveTheChildren</p></div></a>
         <div id="box18" class="box"></div>
         <div id="box19" class="box"></div>
         <div id="box20" class="box"></div>
@@ -50,7 +50,7 @@
         <div id="box25" class="box"></div>
         <div id="box26" class="box"></div>
         <div id="box27" class="box"></div>
-        <a href="millionmagamarch/index.html"><div id="mmm-btn" class="box button"><p class="tag-selection">#millionMAGAmarch</p></div></a>
+        <a href="../millionmagamarch/index.html"><div id="mmm-btn" class="box button"><p class="tag-selection">#millionMAGAmarch</p></div></a>
         <div id="box29" class="box"></div>
         <div id="box30" class="box"></div>
         <div id="box31" class="box"></div>
