--- a/proudboys/index.html
+++ b/proudboys/index.html
@@ -27,7 +27,7 @@
         <div id="image-open" class="photo1"></div>
       </div>
       <div id="wraper">
-        <a  href="../index.html"><div id="box1" class="box homebtn btn"><p class="home">HOME</p></div></a>
+        <a  href="../menu/index.html"><div id="box1" class="box homebtn btn"><p class="home">HOME</p></div></a>
         <div id="box2" class="box"></div>
         <div id="box3" class="box"></div>
         <div id="box4" class="box"></div>
