--- a/warning/index.html
+++ b/warning/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <a href="../index.html">return</a>
+    <a href="../menu/index.html">return</a>
   </body>
 </html>
