tweets with video correction

--- a/proudboys/index.html
+++ b/proudboys/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="story-content"></div>
     <div id="opening-content">
-      <div class="title">
+      <div id="title">
         <h1>#ProudBoys</h>
       </div>
       <div id="image-wraper">
@@ -29,16 +29,17 @@
       <div id="wraper">
         <a  href="../menu/index.html"><div id="box1" class="box homebtn btn"><p class="home">HOME</p></div></a>
         <div id="box2" class="box"></div>
-        <div id="box3" class="box"></div>
-        <div id="box4" class="box"></div>
-        <div id="box5" class="box off"></div>
-        <div id="box6" class="box"></div>
-        <div id="box7" class="box off"></div>
-        <a  href="../about/index.html"><div id="box8" class="box btn"><p class="about">ABOUT</p></div></a>
+        <div id="box3" class="box off"></div>
+        <div id="box4" class="box box2 off"><p class="title"><sup style="font-size: 60%; text-transform: lowercase; text-decoration: underline">A</sup> Hashtag<br>Battlefield</p>
+        <div class="title-line"></div></div>
+        <div id="box5" class="box"></div>
+        <div id="box6" class="box off"></div>
+        <div id="box8" class="box"></div>
+        <div id="box8" class="box"></div>
         <div id="box9" class="box"></div>
         <div id="box10" class="box"></div>
         <div id="box11" class="box"></div>
-        <div id="box12" class="box"></div>
+        <div id="box12" class="box off"></div>
         <div id="box13" class="box off"></div>
         <div id="box14" class="box off"></div>
         <div id="box15" class="box off"></div>
@@ -49,7 +50,7 @@
         <div id="box19" class="box off"></div>
         <div id="box20" class="box startbtn btn"><p class="start">START</p></div>
         <div id="box21" class="box off"></div>
-        <div id="box22" class="box off"></div>
+        <div id="box22" class="box"></div>
         <div id="box23" class="box"></div>
         <div id="box24" class="box"></div>
         <div id="box25" class="box"></div>
@@ -57,21 +58,21 @@
         <div id="box27" class="box"></div>
         <div id="box28" class="box off"></div>
         <div id="box29" class="box off"></div>
-        <div id="box30" class="box off"></div>
+        <div id="box30" class="box"></div>
         <div id="box31" class="box"></div>
         <!--<div id="box32" class="box"></div>-->
       </div>
       <div class="new-divs">
         <div class="box" id="boxX"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
         <div class="box off"></div>
-        <div class="box"></div>
         <div class="box off"></div>
-        <div class="box"></div>
-        <div class="box" id="boxX"></div>
-        <div class="box"></div>
+        <div class="box2 off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off" id="boxX"></div>
+        <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
