--- a/proudboys/index.html
+++ b/proudboys/index.html
@@ -21,7 +21,7 @@
     <div id="story-content"></div>
     <div id="opening-content">
       <div id="title">
-        <h1>#ProudBoys</h>
+        <h1>#ProudBoys</h1>
       </div>
       <div id="image-wraper">
         <div id="image-open" class="photo1"></div>
