warning transition update, tweets name update

--- a/warning/index.html
+++ b/warning/index.html
@@ -31,7 +31,7 @@
         <a id='return' href="../menu/index.html"><div id="box1" class="box"><p class='return'>HOME</p></div></a>
         <div id="box2" class="box"></div>
         <div id="box3" class="box"></div>
-        <div id="box4" class="box"></div>
+        <div id="box4" class="box"><div class="line1"></div></div>
         <div id="box5" class="box"></div>
         <div id="box6" class="box"></div>
         <div id="box7" class="box"></div>
@@ -65,9 +65,9 @@
         <div id="box28" class="box"></div>
         <div id="box29" class="box"></div>
         <div id="box30" class="box"></div>
-        <div id="box31" class="box"></div>
-        <div id="box32" class="box"></div>
-        <div id="box33" class="box"></div>
+        <div id="box31" class="box invisible2"></div>
+        <div id="box32" class="box invisible2"></div>
+        <div id="box33" class="box invisible2"></div>
       </div>
     </div>
   </body>
