--- a/savethechildren/index.html
+++ b/savethechildren/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="story-content"></div>
     <div id="opening-content">
-      <div class="title">
+      <div id="title">
         <h1>#SaveTheChildren</h>
       </div>
       <div id="image-wraper">
