new mmm starting page

--- a/millionmagamarch/index.html
+++ b/millionmagamarch/index.html
@@ -30,47 +30,48 @@
         <a  href="../menu/index.html"><div id="box1" class="box homebtn btn"><p class="home">HOME</p></div></a>
         <div id="box2" class="box"></div>
         <div id="box3" class="box"></div>
-        <div id="box4" class="box"></div>
+        <div id="box4" class="box box2 off"><p class="title"><sup style="font-size: 60%; text-transform: lowercase; text-decoration: underline">A</sup> Hashtag<br>Battlefield</p>
+        <div class="title-line"></div></div>
         <div id="box5" class="box off"></div>
         <div id="box6" class="box"></div>
-        <div id="box7" class="box off"></div>
-        <a  href="../about/index.html"><div id="box8" class="box btn"><p class="about">ABOUT</p></div></a>
-        <div id="box9" class="box"></div>
-        <div id="box10" class="box"></div>
+        <div id="box7" class="box"></div>
+        <div id="box8" class="box off"></div>
+        <div id="box9" class="box off"></div>
+        <div id="box10" class="box off"></div>
         <div id="box11" class="box"></div>
         <div id="box12" class="box"></div>
         <div id="box13" class="box off"></div>
         <div id="box14" class="box off"></div>
         <div id="box15" class="box off"></div>
-        <div id="box16" class="box off"></div>
-        <div id="box17" class="box"></div>
-        <div id="box18" class="box box2"><p class="intro-text">The #millionMAGAmarch popped up on Twitter a few times during the year; it was after the results of the US presidential elections, nonetheless, that it actually gained momentum, with Trump supporters calling people to come out and protest against what they believed to be election fraud. But it did not take long for hijackers to flood the tag with pancake content — exactly, pancakes!<br><br>This story shows how an organized group of people can quickly change the meaning of a hashtag and drown out information, even if momentarily, in an attempt to deviate attention from an event or movement.<br><br></p></div>
+        <div id="box16" class="box"></div>
+        <div id="box17" class="box off"></div>
+        <div id="box18" class="box off"></div>
         <div id="box19" class="box off"></div>
-        <div id="box20" class="box startbtn btn"><p class="start">START</p></div>
-        <div id="box21" class="box off"></div>
+        <div id="box20" class="box box3"><p class="intro-text">The #millionMAGAmarch popped up on Twitter a few times during the year; it was after the results of the US presidential elections, nonetheless, that it actually gained momentum, with Trump supporters calling people to come out and protest against what they believed to be election fraud. But it did not take long for hijackers to flood the tag with pancake content — exactly, pancakes!<br><br>This story shows how an organized group of people can quickly change the meaning of a hashtag and drown out information, even if momentarily, in an attempt to deviate attention from an event or movement.<br><br></p></div>
+        <div id="box21" class="box"></div>
         <div id="box22" class="box off"></div>
-        <div id="box23" class="box"></div>
-        <div id="box24" class="box"></div>
-        <div id="box25" class="box"></div>
+        <div id="box23" class="box off"></div>
+        <div id="box24" class="box startbtn btn"><p class="start">START</p></div>
+        <div id="box25" class="box off"></div>
         <div id="box26" class="box"></div>
         <div id="box27" class="box"></div>
-        <div id="box28" class="box off"></div>
-        <div id="box29" class="box off"></div>
-        <div id="box30" class="box off"></div>
-        <div id="box31" class="box"></div>
+        <div id="box28" class="box"></div>
+        <div id="box29" class="box"></div>
+        <div id="box30" class="box"></div>
+        <!--<div id="box31" class="box"></div>-->
         <!--<div id="box32" class="box"></div>-->
       </div>
       <div class="new-divs">
         <div class="box" id="boxX"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
         <div class="box off"></div>
-        <div class="box"></div>
         <div class="box off"></div>
-        <div class="box"></div>
-        <div class="box" id="boxX"></div>
-        <div class="box"></div>
+        <div class="box off box2" style="overflow: hidden"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off" id="boxX"></div>
+        <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
