--- a/savethechildren/index.html
+++ b/savethechildren/index.html
@@ -29,55 +29,56 @@
       <div id="wraper">
         <a  href="../menu/index.html"><div id="box1" class="box homebtn btn"><p class="home">HOME</p></div></a>
         <div id="box2" class="box"></div>
-        <div id="box3" class="box"></div>
-        <div id="box4" class="box"></div>
+        <div id="box3" class="box off"></div>
+        <div id="box4" class="box box2 off"><p class="title"><sup style="font-size: 60%; text-transform: lowercase; text-decoration: underline">A</sup> Hashtag<br>Battlefield</p>
+        <div class="title-line"></div></div>
         <div id="box5" class="box off"></div>
-        <div id="box6" class="box"></div>
-        <div id="box7" class="box off"></div>
-        <a  href="../about/index.html"><div id="box8" class="box btn"><p class="about">ABOUT</p></div></a>
+        <div id="box6" class="box off"></div>
+        <div id="box7" class="box"></div>
+        <div id="box8" class="box"></div>
         <div id="box9" class="box"></div>
         <div id="box10" class="box"></div>
         <div id="box11" class="box"></div>
-        <div id="box12" class="box"></div>
+        <div id="box12" class="box off"></div>
         <div id="box13" class="box off"></div>
-        <div id="box14" class="box off"></div>
+        <div id="box14" class="box"></div>
         <div id="box15" class="box off"></div>
         <div id="box16" class="box off"></div>
         <div id="box17" class="box"></div>
         <div id="box18" class="box box2"><p class="intro-text">Save The Children is an international NGO that fights to protect children’s rights around the world. The hashtag “#SaveTheChildren” began as a legitimate fundraising campaign and was associated with the organization for quite a while, until it started to be used to spread conspiracy theories by QAnon followers.<br><br>This story is a different example of hashtag hijacking. It shows how it can also happen slowly and silently to spread disinformation.
 <br><br></p>
         </div>
-        <div id="box19" class="box off"></div>
-        <div id="box20" class="box startbtn btn"><p class="start">START</p></div>
+        <div id="box19" class="box startbtn btn"><p class="start">START</p></div>
+        <div id="box20" class="box off"></div>
         <div id="box21" class="box off"></div>
-        <div id="box22" class="box off"></div>
-        <div id="box23" class="box"></div>
-        <div id="box24" class="box"></div>
+        <div id="box22" class="box"></div>
+        <div id="box23" class="box off"></div>
+        <div id="box24" class="box off"></div>
         <div id="box25" class="box"></div>
         <div id="box26" class="box"></div>
-        <div id="box27" class="box"></div>
-        <div id="box28" class="box off"></div>
+        <div id="box27" class="box off"></div>
+        <div id="box28" class="box"></div>
         <div id="box29" class="box off"></div>
         <div id="box30" class="box off"></div>
-        <div id="box31" class="box"></div>
+        <!--<div id="box31" class="box"></div>-->
         <!--<div id="box32" class="box"></div>-->
       </div>
       <div class="new-divs">
-        <div class="box" id="boxX"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box off" id="boxX"></div>
         <div class="box off"></div>
-        <div class="box"></div>
         <div class="box off"></div>
-        <div class="box"></div>
-        <div class="box" id="boxX"></div>
-        <div class="box"></div>
+        <div class="box off box2" style="overflow: hidden"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
-        <div class="box off "></div>
+        <div class="box off" id="boxX"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
+        <div class="box off"></div>
         <div class="box off"></div>
       </div>
     </div>
