correction bug conclusion

--- a/warning/index.html
+++ b/warning/index.html
@@ -31,7 +31,7 @@
         <a id='return' href="../menu/index.html"><div id="box1" class="box"><p class='return'>HOME</p></div></a>
         <div id="box2" class="box"></div>
         <div id="box3" class="box"></div>
-        <div id="box4" class="box"><div class="line1"></div></div>
+        <div id="box4" class="box2"><div class="line1"></div></div>
         <div id="box5" class="box"></div>
         <div id="box6" class="box"></div>
         <div id="box7" class="box"></div>
