mmm correction / stc clicks correction

--- a/millionmagamarch/index.html
+++ b/millionmagamarch/index.html
@@ -24,7 +24,7 @@
         <h1>#millionMAGAmarch</h>
       </div>
       <div id="image-wraper">
-        <div id="image-open" class="photo1"></div>
+        <div id="image-open" class="photo3"></div>
       </div>
       <div id="wraper">
         <a  href="../menu/index.html"><div id="box1" class="box homebtn btn"><p class="home">HOME</p></div></a>
@@ -70,7 +70,7 @@
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
-        <div class="box off" id="boxX"></div>
+        <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
