--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="title">
-      <h1>#About</h>
+      <h1>#About</h1>
     </div>
     <div id="fixedbar">
       <a href="../menu/index.html"><div id="homebtn" class="box"><p>HOME</p></div></a>
@@ -115,7 +115,7 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box box2"><h1 class="subtitle">protocol #4</h1></div>
+      <div class="box box2 subc"><h1 class="subtitle">Protocol<br>#4</h1></div>
       <div class="box off"></div>
       <div class="box off"></div>
       <div class="box off"></div>
@@ -148,7 +148,7 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box box2"><h1 class="subtitle">The aim of "A Hashtag Battlefield"</h1></div>
+      <div class="box box2 subc"><h1 class="subtitle">The aim of<br>"A Hashtag Battlefield"</h1></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
@@ -166,7 +166,14 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box box2"><h1 class="subtitle">Building "A Hashtag Battlefield"</h1></div>
+      <div class="box box2 subc"><h1 class="subtitle">Building<br>"A Hashtag Battlefield"</h1></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box download-btn"><p style="text-transform: uppercase">Download<br>our<br>database</p></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
@@ -186,37 +193,30 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
+      <div class="box box2 subc"><h1 class="subtitle">Our team</h1></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
+      <div class="box name"><p>André Calderolli</p></div>
       <div class="box"></div>
-      <div class="box box2"><h1 class="subtitle">Our team</h1></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box name"><p>Fernanda de Alba</p></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
+      <div class="box name"><p>Priscila Yoshihara</p></div>
+      <div class="box"></div>
+      <div class="box"><p>Yunrui Zhu</p></div>
+      <div class="box"></div>
+      <div class="box"><p>Maria Paula Vargas</p></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
+      <div class="box"><p>Johannes Longardt</p></div>
       <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box"><p>Fatemah Goodarzi</p></div>
       <div class="box"></div>
       <div class="box"></div>
       <div id="footer"></div>
