warning just when visited

--- a/menu/index.html
+++ b/menu/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="box5" class="box"></div>
         <div id="box6" class="box"></div>
-        <a href="../warning/index.html"><div id="box7" class="box button"><p class="button-text">Warning!</p></div></a>
+        <div id="box7" class="box button"><p id="warning" class="button-text">Warning!</p></div>
         <div id="box8" class="box"></div>
         <div id="box9" class="box"></div>
         <div id="box10" class="box"></div>
