--- a/about/index.html
+++ b/about/index.html
@@ -29,6 +29,7 @@
     <div id="images-container">
       <div id="img1"></div>
       <div id="img2"></div>
+      <div id="img3"></div>
     </div>
     <div id="wraper-content">
       <div class="box" id="box1"></div>
@@ -167,59 +168,59 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box box2 subc"><h1 class="subtitle">Building<br>"A Hashtag Battlefield"</h1></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box download-btn"><p style="text-transform: uppercase">Download<br>our<br>database</p></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box box2 subc"><h1 class="subtitle">Our team</h1></div>
       <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box off"></div>
+      <div class="box off"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box name"><p>André Calderolli</p></div>
-      <div class="box"></div>
       <div class="box name"><p>Fernanda de Alba</p></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
       <div class="box name"><p>Priscila Yoshihara</p></div>
-      <div class="box"></div>
-      <div class="box"><p>Yunrui Zhu</p></div>
-      <div class="box"></div>
-      <div class="box"><p>Maria Paula Vargas</p></div>
+      <div class="box name"><p>Yunrui Zhu</p></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box"><p>Johannes Longardt</p></div>
+      <div class="box name"><p>Maria Paula Vargas</p></div>
+      <div class="box name"><p>Johannes Longardt</p></div>
+      <div class="box name"><p>Fatemah Goodarzi</p></div>
       <div class="box"></div>
-      <div class="box"><p>Fatemah Goodarzi</p></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div id="footer"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <!--<div id="footer"></div>-->
     </div>
 
   </body>
