--- a/about/index.html
+++ b/about/index.html
@@ -30,6 +30,13 @@
       <div id="img1"></div>
       <div id="img2"></div>
       <div id="img3"></div>
+      <div id="andre"></div>
+      <div id="pri"></div>
+      <div id="helia"></div>
+      <div id="mapi"></div>
+      <div id="fer"></div>
+      <div id="hannes"></div>
+      <div id="julie"></div>
     </div>
     <div id="wraper-content">
       <div class="box" id="box1"></div>
@@ -174,7 +181,7 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box download-btn"><p style="text-transform: uppercase">Download<br>our<br>database</p></div>
+      <a href="path_to_file" download="Database_A_Hashtag_Battlefield.xlsx"><div class="box download-btn"><p style="text-transform: uppercase">Download<br>our<br>sources</p></div></a>
       <div class="box off"></div>
       <div class="box off"></div>
       <div class="box off"></div>
@@ -215,8 +222,8 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box icon2"></div>
+      <div class="box icon1"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
