--- a/about/index.html
+++ b/about/index.html
@@ -222,11 +222,11 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box icon2"></div>
-      <div class="box icon1"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
+      <div class="box"><div class="icon2"></div></div>
+      <div class="box"><div class="icon1"></div></div>
       <!--<div id="footer"></div>-->
     </div>
 
