--- a/about/index.html
+++ b/about/index.html
@@ -181,7 +181,7 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <a href="path_to_file" download="assets/Database_A_Hashtag_Battlefield.xlsx"><div class="box download-btn"><p style="text-transform: uppercase">Download<br>our<br>sources</p></div></a>
+      <a href="assets/Database_A_Hashtag_Battlefield.xlsx" download="Database_A_Hashtag_Battlefield.xlsx"><div class="box download-btn"><p style="text-transform: uppercase">Download<br>our<br>sources</p></div></a>
       <div class="box off"></div>
       <div class="box off"></div>
       <div class="box off"></div>
