--- a/about/index.html
+++ b/about/index.html
@@ -225,6 +225,25 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box name"><p class="intro-text"><b>Faculty</b></br></br>
+        Michele Mauri</br>
+        Ángeles Briones</br>
+        Gabriele Colombo</br>
+        Simone Vantini</br>
+        Salvatore Zingale</p></div>
+      <div class="box name"><p class="intro-text"><b>Teaching Assistants</b></br></br>
+        Antonella Autuori</br>
+        Andrea Benedetti</br>
+        Matteo Bettini</br>
+        Tommaso Elli</br>
+        Andrea E. F. Medina</br>
+        Beatrice Gobbo</br>
+      </p></div>
       <div class="box"><div class="icon2"></div></div>
       <div class="box"><div class="icon1"></div></div>
       <!--<div id="footer"></div>-->
