correction faculty names

--- a/about/index.html
+++ b/about/index.html
@@ -230,13 +230,13 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box name"><p class="intro-text"><b>Faculty</b></br></br>
+      <div class="box name2"><p class="intro-text"><b>Faculty</b></br></br>
         Michele Mauri</br>
         Ángeles Briones</br>
         Gabriele Colombo</br>
         Simone Vantini</br>
         Salvatore Zingale</p></div>
-      <div class="box name"><p class="intro-text"><b>Teaching Assistants</b></br></br>
+      <div class="box name2"><p class="intro-text"><b>Teaching Assistants</b></br></br>
         Antonella Autuori</br>
         Andrea Benedetti</br>
         Matteo Bettini</br>
