--- a/millionmagamarch/index.html
+++ b/millionmagamarch/index.html
@@ -62,22 +62,22 @@
         <!--<div id="box32" class="box"></div>-->
       </div>
       <div class="new-divs">
-        <div class="box" id="boxX"></div>
+        <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off box2" style="overflow: hidden"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
-        <div class="box off"></div>
-        <div class="box off"></div>
+        <div class="box off boxX"></div>
+        <div class="box off boxX"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off"></div>
         <div class="box off "></div>
-        <div class="box off"></div>
+        <div class="box off boxX"></div>
       </div>
     </div>
   </body>
