correciton warning page layout

--- a/warning/index.html
+++ b/warning/index.html
@@ -32,7 +32,7 @@
         <div id="box2" class="box"></div>
         <div id="box3" class="box"></div>
         <div id="box4" class="box2"><div class="line1"></div></div>
-        <div id="box5" class="box"></div>
+        <!--<div id="box5" class="box"></div>-->
         <div id="box6" class="box"></div>
         <div id="box7" class="box"></div>
         <div id="box8" class="box"></div>
