correction warning page layout

--- a/warning/index.html
+++ b/warning/index.html
@@ -68,6 +68,7 @@
         <div id="box31" class="box invisible2"></div>
         <div id="box32" class="box invisible2"></div>
         <div id="box33" class="box invisible2"></div>
+        <div id="box34" class="box invisible2"></div>
       </div>
     </div>
   </body>
