favicon and max-width correction

--- a/savethechildren/index.html
+++ b/savethechildren/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>#SaveTheChildren</title>
+    <link rel="icon" href="../assets/favicon.svg">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/style-story.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
