--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>About the project</title>
+    <link rel="icon" href="../assets/favicon.svg">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/style-story.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
